# monogate

./: .gitignore  CHANGELOG.md  CONTEXT.md  Dockerfile  LEADERBOARD.md  Makefile  README.md  RESEARCH_IDEAS.md  THEORY.md  capability_card_public.json  package.json  requirements-streamlit.txt  streamlit_app.py
monogate-core/: Cargo.toml  README.md  pyproject.toml
monogate-core/benchmarks/: bench_eval.rs
monogate-core/src/: evaluator.rs  lib.rs  sin_search.rs
python/: ANNOUNCEMENT.md  CHANGELOG.md  PAPER.md  README.md  RESULTS.md  SRBENCH.md  THEORY.md  analyze_costs.py  arxiv_submission_notes.md  compute_polynomial_costs.py  mkdocs.yml  pyproject.toml  requirements-reproduce.txt
python/assets/: n11_share_card.md
python/benchmarks/: __init__.py  kernel_benchmarks.py  results.md  symbolic_regression_comparison.py
python/docs/: index.md  installation.md  special_functions.md
python/examples/: build_regression_demo.py  symbolic_regression.py  symbolic_regression_demo.ipynb  symbolic_regression_demo.py  symbolic_regression_full.py
python/experiments/: attractor_phase_transition.json  experiment_12_siren.py  gen_attractor_data.py  gen_attractor_data_v2.py  i_catalog_s76.py  i_challenge_board_s77.py  i_constructibility.py  i_constructibility_s62.py  i_constructibility_s63.py  i_ipi_algebra_s72.py  i_strict_s70.py  i_synthesis_s79.py  lean_proof_s67.py  plot_attractor_landscape.py  research_02_attractors.py  research_03_edl_completeness.py  research_04_tree_search.py  research_07_attractor_identity.py  research_07b_basin_geometry.py  research_08_physics_survey.py  sin_search_01.py  sin_search_02.py  sin_search_03.py  sin_search_04.py  srbench_runner.py  tan1_s80.py  tan1_s81.py  tan1_s82.py  tan1_s83.py  tan1_s84.py  tan1_s85.py  tan1_s86.py  tan1_s87.py  tan1_s88.py  tan1_s89.py
python/monogate/: __init__.py  capability_card_schema.json  complex.py  complex_best.py  complex_eval.py  complex_search.py  core.py  fused_rust.py  identities.py  information_geometry.py  interval.py  leaderboard.py  machlib_emitter.py  minimax.py  network.py  operators.py  optimize.py  physics.py  pinn.py  prover.py  quantum.py  sklearn_wrapper.py  special.py  superbest.py  sympy_bridge.py  sympy_integration.py  torch_ops.py  validate.py  witness.py
python/nn/: nn1_superbest_training.py  nn2_gradient_wall.py  nn3_activation_costs.py  nn4_hardware_analysis.py  nn5_branch_cut.py  nn6_sr_benchmark.py  nn7_activation_shootout.py  nn8_distillation.py  nn9_operator_search.py
python/notebooks/: 01_eml_basics.py  02_best_routing.py  03_complex_bypass.py  04_pytorch_emllayer.py  05_symbolic_regression.py  attractor_generalization.py  build_e06.py  colab_demo.ipynb  complex_special_functions.py  eml_k_final_resolution.ipynb  eml_layer_siren_example.py  experiment_03.ipynb  experiment_03_results.json  experiment_04.ipynb  experiment_04_results.json  experiment_06.ipynb  experiment_06_results.json  experiment_08_benchmark.py  experiment_09_mlp_demo.py  experiment_10_transformer_ffn.py  experiment_11.py  llm_optimizer_demo.py  mcts_sin_approximation.py  minimax_approximation.py  neurosymbolic_prover_demo.py  operator_zoo.py  operators_study.py  operators_study_v2.py  performance_kernels.py  physics_complexity_census.ipynb  physics_identities.py  physics_identities_discovery.py  pinn_eml_demo.py  prover_showcase.ipynb  prover_v2_explorer.ipynb  regression_comparison.py  session1001_hodge_surjectivity_anatomy_eml.py  session1004_tropical_hodge_groups_attack_eml.py  session1006_luc30_surjectivity_eml.py  session1007_hodge_shadow_bridge_eml.py  (+602 more)
python/paper/: README.md  arxiv_submission_notes.md  infinite_zeros_barrier.tex  preprint.tex  proof_edl_completeness.tex  proof_n12_search_plan.tex  proof_superbest_optimality.tex  proof_t01_lean_closure.tex
python/results/: add_gen_11n_conjecture.json  add_gen_2n_proof.json  add_gen_cascade.json  astro1_stellar.json  astro2_cosmology.json  astro3_orbital.json  attractor_200digit.txt  attractor_hessian.json  attractor_identity_candidates.txt  attractor_investigation.json  attractor_investigation_summary.md  attractor_orthogonal_pslq_200.json  attractor_pslq_report.json  attractor_value_high_precision.txt  bio_1_biology.json  bio_2_motor_equations.json  cal_quantum_results.json  chem_1_chemistry.json  comp_all_domain2_summary.json  comp_all_summary.json  cost1_regression.json  deml_census_d4.json  deml_census_full.json  econ1_finance.json  econ2_black_scholes.json  econ3_macroeconomics.json  econ_1_economics.json  eml_complexity_census.json  eml_fourier_basis_sin.json  exploration_log.txt  exploration_summary_20260416_124542.md  f17_resolution.json  fin_1_black_scholes.json  fin_2_portfolio.json  geoe1_geophysics.json  geoe2_geochemistry.json  geoe3_geodynamics.json  info_1_information_theory.json  isomorphism_families.json  j0_domain_study.json  (+653 more)
python/scripts/: compile_routing.py  domain_check_mul.py  gen_div_lean_cases.py  prepare_v0.10.py  release_v0.11.0.py  release_v1.1.0.py  reproduce_n11.py  research_cal_quantum.py  research_new_operators.py  run_exploration.py  run_srbench.py  update_arxiv_id.py  update_leaderboard.py  verify_add_gen_2n.py  verify_all_domain2.py  verify_bio_1.py  verify_chem_1.py  verify_econ_1.py  verify_fin_1.py  verify_fin_2.py  verify_info_1.py  verify_nat.py  verify_phys_motor.py  verify_qm_1.py  verify_sport.py  verify_tech_1_2.py  verify_tech_3_4.py  verify_thermo_1.py  x17_isomorphism_graph.py  x18_operator_subset_costs.py  x1_spectrum.py  x8_superbest_domain_audit.py
python/tests/: test_best_routing.py  test_capability_card_cli.py  test_compile.py  test_complex.py  test_complex_best.py  test_edl.py  test_eml_complexity.py  test_eml_layer.py  test_information_geometry.py  test_interval.py  test_leaderboard.py  test_llm.py  test_machlib_emitter.py  test_machlib_roundtrip.py  test_minimax.py  test_optimize.py  test_physics.py  test_pinn.py  test_prover.py  test_quantum.py  test_search_hardening.py  test_sklearn_wrapper.py  test_special.py  test_srbench.py  test_sympy_bridge.py  test_sympy_integration.py  test_torch.py  (+1 more)
(+808 files in other folders)
