[package]
name = "monogate-core"
version = "0.1.0"
edition = "2021"
description = "Compiled EML/BEST evaluation kernels for monogate"
license = "MIT"
authors = ["monogate contributors"]
repository = "https://github.com/monogate/monogate"
keywords = ["eml", "activation", "neural-network", "math"]
categories = ["science", "mathematics"]

[lib]
name = "monogate_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
extension-module = ["pyo3/extension-module"]

[[bench]]
name = "bench_eval"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
