[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "monogate-core"
version = "0.1.0"
description = "Compiled EML/BEST evaluation kernels for monogate"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "monogate_core"
